--- a/app/src/main/res/layout/activity_error.xml
+++ b/app/src/main/res/layout/activity_error.xml
@@ -57,7 +57,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    android:text="去打作者脸"
+                    android:text="复制"
                     android:textSize="15dp" />
             </LinearLayout>
         </ScrollView>
